<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <!--<TextView-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="50dp"-->
    <!--android:background="#3F51B5"-->
    <!--android:gravity="left|center_vertical"-->
    <!--android:text="@string/gdpms_title" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#21C0FF"
        android:orientation="vertical">

        <ImageView
            android:layout_width="123dp"
            android:layout_height="123dp"
            android:layout_gravity="center"
            android:src="@drawable/ysdalpha_0" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#6AD4FF"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/gdpms_user" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/gdpms_usertip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/gdpms_password" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="10"
                    />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gdpms_student" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gdpms_teacher" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/gdpms_chairman" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gdpms_adminstrator" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#5DA9FF"
                    android:text="@string/gdpms_login" />
                <!--<Button-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="20dp"-->
                <!--android:text="@string/gdpms_forget_password"-->
                <!--android:layout_gravity="right"/>-->
            </LinearLayout>
        </LinearLayout>

        <ListView
            android:id="@android:id/list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2">

        </ListView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gdpms_wuzhanghao" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gdpms_registe" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>